# bot

./: CMakeLists.txt  main.cpp
include/: Coin.h  CoinbaseRobotCpp.h  MarketPair.h  ResourceHolder.hpp
